            - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
			- Supports Tint + Color
. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.
. [NEW] Macros: ccgl* replaced with ccGL*
. [NEW] Math: Using kazmath for matrix and projection operations, and matrix GL stack
. [NEW] Math: Using NEON Matrix Multiplication from Oolong project
. [NEW] Test: FontTest uses  "bundle" fonts instead of FontLabel
. [NEW] Tiled: cc_vertexz property is no longer supported. Will raise exception if found.
. [NEW] Types: ccColor?B replaced with ccColor?UB
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] CCProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] TextureCache: Uses "self" instead of "CCTextureCache" in shared instance
. [FIX] Xcode: cocosLive: Removed. Use OpenFeint or GameCenter instead
. [FIX] Xcode: FontLabel: Removed since in iOS 4 you can load custom TTF
. [FIX] Xcode: TouchJSON: Removed. No longer needed since cocosLive was removed
. [FIX] Xcode: Tremor / vorbis: Removed. Experimental sound engine is no longer supported
. [FIX] Xcode: iOS 4 is minimun required to run

version 1.0.0 -
. [NEW] ccpSegmentIntersect & ccpPointIntersect: Added helper functions for ccpLineIntersect (issue #1193)
. [NEW] Scheduler: Added isTargetPaused method
. [NEW] Sprite: Debugging draw for texture (issue #879)
. [NEW] Textures: PVR supports NPOT textures
. [FIX] CCArray: ForEach prepends "__" to inner variables to prevent conflict
. [FIX] ccpLineIntersect works as expected. Improved performance (issue #1174, #1193)
. [FIX] cocosLive: fixed memory leak in ScoreServerPost
. [FIX] Director: Added asserts to prevent calling startAnimation twice.
. [FIX] Tests: Fixed memory leak in ParticleTest