@@ -3,7 +3,8 @@
 //CLASS INTERFACE
 @interface AppController : NSObject <UIApplicationDelegate>
 {
-	UIWindow	*window;
+	UIWindow	*window_;
+	UIViewController *viewController_;
 }
 @end
 
