@@ -6,7 +6,8 @@
 #ifdef __IPHONE_OS_VERSION_MAX_ALLOWED
 @interface AppController : NSObject <UIApplicationDelegate>
 {
-	UIWindow *window;
+	UIWindow *window_;
+	UIViewController *viewController_;
 }
 @end
 
