@@ -8,6 +8,10 @@
 // cocos import
 #import "RenderTextureTest.h"
 
+#ifdef __IPHONE_OS_VERSION_MAX_ALLOWED
+#import "RootViewController.h"
+#endif
+
 static int sceneIdx=-1;
 static NSString *tests[] = {	
 	@"RenderTextureSave",
@@ -530,13 +534,10 @@ Class restartAction()
 - (void) applicationDidFinishLaunching:(UIApplication*)application
 {
 	// Init the window
-	window = [[UIWindow alloc] initWithFrame:[[UIScreen mainScreen] bounds]];
+	window_ = [[UIWindow alloc] initWithFrame:[[UIScreen mainScreen] bounds]];
 	
 	// before creating any layer, set the landscape mode
 	CCDirector *director = [CCDirector sharedDirector];
-	
-	// landscape orientation
-	[director setDeviceOrientation:kCCDeviceOrientationLandscapeLeft];
 	
 	// set FPS at 60
 	[director setAnimationInterval:1.0/60];
@@ -545,7 +546,7 @@ Class restartAction()
 	[director setDisplayFPS:YES];
 	
 	// Create an EAGLView with a RGB8 color buffer, and a depth buffer of 24-bits
-	EAGLView *glView = [EAGLView viewWithFrame:[window bounds]
+	EAGLView *glView = [EAGLView viewWithFrame:[window_ bounds]
 								   pixelFormat:kEAGLColorFormatRGB565
 								   depthFormat:0];
 	
@@ -559,11 +560,18 @@ Class restartAction()
 	if( ! [director enableRetinaDisplay:YES] )
 		CCLOG(@"Retina Display Not supported");
 	
+	// Init the View Controller
+	viewController_ = [[RootViewController alloc] initWithNibName:nil bundle:nil];
+	viewController_.wantsFullScreenLayout = YES;
+	
+	// make the OpenGLView a child of the view controller
+	[viewController_ setView:glView];
+	
 	// make the OpenGLView a child of the main window
-	[window addSubview:glView];
+	[window_ addSubview:viewController_.view];
 	
 	// make main window visible
-	[window makeKeyAndVisible];	
+	[window_ makeKeyAndVisible];	
 	
 	// Default texture format for PNG/BMP/TIFF/JPEG/GIF images
 	// It can be RGBA8888, RGBA4444, RGB5_A1, RGB565
@@ -618,7 +626,7 @@ Class restartAction()
 
 - (void) dealloc
 {
-	[window release];
+	[window_ release];
 	[super dealloc];
 }
 @end
